# agenthud

./: LICENSE  README.md  pyproject.toml
docs/plans/: 2026-03-13-agenthud-design.md  2026-03-13-agenthud-implementation.md
hooks/: permission-request.sh  post-tool-use.sh  session-end.sh  session-start.sh  statusline.sh  stop.sh  user-prompt-submit.sh
skills/agenthud-add/: SKILL.md
skills/agenthud-remove/: SKILL.md
src/agenthud/: app.py  installer.py  models.py  register.py  watcher.py
src/agenthud/widgets/: __init__.py  agent_box.py  empty_state.py
tests/: test_models.py  test_watcher.py
