[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenthud"
version = "0.1.0"
description = "TUI dashboard for monitoring Claude Code agent sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Rameez Jhaveri", email = "rameez.jhaveri@gmail.com" },
]
keywords = ["claude", "claude-code", "tui", "dashboard", "agent", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "textual>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/rameez-j/agenthud"
Repository = "https://github.com/rameez-j/agenthud"
Issues = "https://github.com/rameez-j/agenthud/issues"

[project.optional-dependencies]
dev = [
    "textual-dev",
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
agenthud = "agenthud.app:main"

[tool.hatch.build.targets.wheel.force-include]
"hooks" = "agenthud/data/hooks"
